--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-native-fancy-downloader",
   "version": "1.0.0",
@@ -15,6 +14,9 @@
   "peerDependencies": {
     "react-native": "^0.41.2",
     "react-native-windows": "0.41.0-rc.1"
-
+  },
+  "dependencies": {
+    "react-native-fetch-blob": "git+https://github.com/wkh237/react-native-fetch-blob.git",
+    "react-native-progress": "git+https://github.com/oblador/react-native-progress.git"
   }
 }
