--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-windows": "0.41.0-rc.1"
   },
   "dependencies": {
+    "react": "^16.4.1",
     "react-native-fetch-blob": "git+https://github.com/wkh237/react-native-fetch-blob.git",
     "react-native-progress": "git+https://github.com/oblador/react-native-progress.git"
   }
